--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "lint": "tslint \"src/**/*.ts\""
+    // "test": "ng test",
+    // "pree2e": "webdriver-manager update",
+    // "e2e": "protractor"
   },
   "private": true,
   "dependencies": {
